Update index.html to include navigation links to all HTML files

--- a/index.html
+++ b/index.html
@@ -3,29 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Site</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>GaltiMoth Navigation</title>
 </head>
 <body>
-    <header class="site-header">
-        <h1>Welcome to My Site</h1>
-    </header>
-
-    <nav class="site-nav">
+    <h1>Welcome to GaltiMoth's Website</h1>
+    <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/pages/page1.html">Page 1</a></li>
-            <li><a href="/pages/page2.html">Page 2</a></li>
+            <li><a href="3d-gitternetworking.html">3D Gitternetworking</a></li>
+            <li><a href="3dncoverlay.html">3D NC Overlay</a></li>
+            <li><a href="ARQV.html">ARQV</a></li>
+            <li><a href="BRE470 Design Process Flowchart.html">BRE470 Design Process Flowchart</a></li>
+            <li><a href="PPTDM24.HTML">PPTDM24</a></li>
+            <li><a href="TIMS_DIM_SIM.html">TIMS DIM SIM</a></li>
+            <li><a href="coordinate_visualization.html">Coordinate Visualization</a></li>
+            <li><a href="cpt-summarizatior.html">CPT Summarization</a></li>
+            <li><a href="enviro-gas-dash.html">Environmental Gas Dashboard</a></li>
+            <li><a href="excel_converter_with_copy.html">Excel Converter with Copy</a></li>
+            <li><a href="fluvial-filing-opt.html">Fluvial Filing Optimization</a></li>
+            <li><a href="gnss-viewer.html">GNSS Viewer</a></li>
+            <li><a href="gnssviewerandcontour.html">GNSS Viewer and Contour</a></li>
+            <li><a href="gps-comparinator.html">GPS Comparinator</a></li>
+            <li><a href="gps-surface-updating.html">GPS Surface Updating</a></li>
+            <li><a href="gps-editor.html">GPS Editor</a></li>
+            <li><a href="groundwater-monitor.html">Groundwater Monitor</a></li>
+            <li><a href="Interactive pad footing.html">Interactive Pad Footing</a></li>
+            <li><a href="photogrammasect.html">Photogrammasect</a></li>
+            <li><a href="ssm-verification-wip.html">SSM Verification WIP</a></li>
+            <li><a href="trig.html">Trigonometry</a></li>
+            <li><a href="unified GWM visualize.html">Unified GWM Visualize</a></li>
         </ul>
     </nav>
-
-    <main class="site-main">
-        <h2>Main Content</h2>
-        <p>Replace this with your content.</p>
-    </main>
-
-    <footer class="site-footer">
-        <p>&copy; 2026 My Site. All rights reserved.</p>
-    </footer>
 </body>
 </html>
