Refactor index.html structure and navigation links

--- a/index.html
+++ b/index.html
@@ -4,34 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GaltiMoth Navigation</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Welcome to GaltiMoth's Website</h1>
-    <nav>
+    <header class="site-header">
+        <h1>Welcome to GaltiMoth's Website</h1>
+    </header>
+
+    <nav class="site-nav">
         <ul>
-            <li><a href="3d-gitternetworking.html">3D Gitternetworking</a></li>
-            <li><a href="3dncoverlay.html">3D NC Overlay</a></li>
-            <li><a href="ARQV.html">ARQV</a></li>
-            <li><a href="BRE470 Design Process Flowchart.html">BRE470 Design Process Flowchart</a></li>
-            <li><a href="PPTDM24.HTML">PPTDM24</a></li>
-            <li><a href="TIMS_DIM_SIM.html">TIMS DIM SIM</a></li>
-            <li><a href="coordinate_visualization.html">Coordinate Visualization</a></li>
-            <li><a href="cpt-summarizatior.html">CPT Summarization</a></li>
-            <li><a href="enviro-gas-dash.html">Environmental Gas Dashboard</a></li>
-            <li><a href="excel_converter_with_copy.html">Excel Converter with Copy</a></li>
-            <li><a href="fluvial-filing-opt.html">Fluvial Filing Optimization</a></li>
-            <li><a href="gnss-viewer.html">GNSS Viewer</a></li>
-            <li><a href="gnssviewerandcontour.html">GNSS Viewer and Contour</a></li>
-            <li><a href="gps-comparinator.html">GPS Comparinator</a></li>
-            <li><a href="gps-surface-updating.html">GPS Surface Updating</a></li>
-            <li><a href="gps-editor.html">GPS Editor</a></li>
-            <li><a href="groundwater-monitor.html">Groundwater Monitor</a></li>
-            <li><a href="Interactive pad footing.html">Interactive Pad Footing</a></li>
-            <li><a href="photogrammasect.html">Photogrammasect</a></li>
-            <li><a href="ssm-verification-wip.html">SSM Verification WIP</a></li>
-            <li><a href="trig.html">Trigonometry</a></li>
-            <li><a href="unified GWM visualize.html">Unified GWM Visualize</a></li>
+            <li><a href="/pages/3d cpttestworking.html">3D CPT Test Working</a></li>
+            <li><a href="/pages/3dnooverlay.html">3D No Overlay</a></li>
+            <li><a href="/pages/ARGV.html">ARGV</a></li>
+            <li><a href="/pages/BRE470 Design Process Flowchart.html">BRE470 Design Process Flowchart</a></li>
+            <li><a href="/pages/PDFTOMP4.HTML">PDFTOMP4</a></li>
+            <li><a href="/pages/TIMS_DIM_SIM.html">TIMS DIM SIM</a></li>
+            <li><a href="/pages/coordinate_visualization.html">Coordinate Visualization</a></li>
+            <li><a href="/pages/cpt summarizinator.html">CPT Summarizinator</a></li>
+            <li><a href="/pages/enviro gas-dash.html">Enviro Gas Dashboard</a></li>
+            <li><a href="/pages/excel_converter_with_copy.html">Excel Converter with Copy</a></li>
+            <li><a href="/pages/fluvial-fining-cpt.html">Fluvial Fining CPT</a></li>
+            <li><a href="/pages/gnss viewer.html">GNSS Viewer</a></li>
+            <li><a href="/pages/gnssviewerandcontour.html">GNSS Viewer and Contour</a></li>
+            <li><a href="/pages/gps comarinator.html">GPS Comarinator</a></li>
+            <li><a href="/pages/gps surface_updating.html">GPS Surface Updating</a></li>
+            <li><a href="/pages/gpx editor.html">GPX Editor</a></li>
+            <li><a href="/pages/groundwater_monitor.html">Groundwater Monitor</a></li>
+            <li><a href="/pages/interactive pad footing.html">Interactive Pad Footing</a></li>
+            <li><a href="/pages/photogramxsect.html">Photogram Xsect</a></li>
+            <li><a href="/pages/ssm verification wip.html">SSM Verification WIP</a></li>
+            <li><a href="/pages/trig.html">Trigonometry</a></li>
+            <li><a href="/pages/unified GWM visualise.html">Unified GWM Visualise</a></li>
         </ul>
     </nav>
+
+    <main class="site-main">
+        <h2>Main Content</h2>
+        <p>Select a tool from the navigation above to get started.</p>
+    </main>
+
+    <footer class="site-footer">
+        <p>&copy; 2026 GaltiMoth. All rights reserved.</p>
+    </footer>
 </body>
 </html>
