Update index.html with grouped sections, tool cards, and responsive layout.

--- a/index.html
+++ b/index.html
@@ -3,48 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GaltiMoth Navigation</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Tool Showcase</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="site-header">
-        <h1>Welcome to GaltiMoth's Website</h1>
+    <header>
+        <h1>Welcome to Our Tool Showcase</h1>
     </header>
-
-    <nav class="site-nav">
-        <ul>
-            <li><a href="/pages/3d cpttestworking.html">3D CPT Test Working</a></li>
-            <li><a href="/pages/3dnooverlay.html">3D No Overlay</a></li>
-            <li><a href="/pages/ARGV.html">ARGV</a></li>
-            <li><a href="/pages/BRE470 Design Process Flowchart.html">BRE470 Design Process Flowchart</a></li>
-            <li><a href="/pages/PDFTOMP4.HTML">PDFTOMP4</a></li>
-            <li><a href="/pages/TIMS_DIM_SIM.html">TIMS DIM SIM</a></li>
-            <li><a href="/pages/coordinate_visualization.html">Coordinate Visualization</a></li>
-            <li><a href="/pages/cpt summarizinator.html">CPT Summarizinator</a></li>
-            <li><a href="/pages/enviro gas-dash.html">Enviro Gas Dashboard</a></li>
-            <li><a href="/pages/excel_converter_with_copy.html">Excel Converter with Copy</a></li>
-            <li><a href="/pages/fluvial-fining-cpt.html">Fluvial Fining CPT</a></li>
-            <li><a href="/pages/gnss viewer.html">GNSS Viewer</a></li>
-            <li><a href="/pages/gnssviewerandcontour.html">GNSS Viewer and Contour</a></li>
-            <li><a href="/pages/gps comarinator.html">GPS Comarinator</a></li>
-            <li><a href="/pages/gps surface_updating.html">GPS Surface Updating</a></li>
-            <li><a href="/pages/gpx editor.html">GPX Editor</a></li>
-            <li><a href="/pages/groundwater_monitor.html">Groundwater Monitor</a></li>
-            <li><a href="/pages/interactive pad footing.html">Interactive Pad Footing</a></li>
-            <li><a href="/pages/photogramxsect.html">Photogram Xsect</a></li>
-            <li><a href="/pages/ssm verification wip.html">SSM Verification WIP</a></li>
-            <li><a href="/pages/trig.html">Trigonometry</a></li>
-            <li><a href="/pages/unified GWM visualise.html">Unified GWM Visualise</a></li>
-        </ul>
-    </nav>
-
-    <main class="site-main">
-        <h2>Main Content</h2>
-        <p>Select a tool from the navigation above to get started.</p>
+    <main>
+        <section class="tools">
+            <div class="tool-card">
+                <div class="tool-header">🔧 Tool 1</div>
+                <p>Description of Tool 1.</p>
+            </div>
+            <div class="tool-card">
+                <div class="tool-header">🛠️ Tool 2</div>
+                <p>Description of Tool 2.</p>
+            </div>
+            <div class="tool-card">
+                <div class="tool-header">⚙️ Tool 3</div>
+                <p>Description of Tool 3.</p>
+            </div>
+            <!-- Add more tools as needed -->
+        </section>
     </main>
-
-    <footer class="site-footer">
-        <p>&copy; 2026 GaltiMoth. All rights reserved.</p>
+    <footer>
+        <p>&copy; 2026 GaltiMoth</p>
     </footer>
 </body>
 </html>
